# lantern-pkms

./: .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY-REVIEW.md  pyproject.toml
config/: symbol-mapping.default.yml  taxonomy.default.yml
scripts/: htr_bench.py
src/home_pkms/: config.py  main.py  metrics.py
src/home_pkms/htr/: ollama_client.py  prompts.py
src/home_pkms/state/: db.py
src/home_pkms/structuring/: symbol_mapping.py
src/home_pkms/supernote/: client.py
src/home_pkms/vault/: writer.py
src/lantern_pkms/: config.py  main.py  metrics.py  taxonomy.py
src/lantern_pkms/htr/: ollama_client.py  prompts.py  schema.py
src/lantern_pkms/state/: db.py
src/lantern_pkms/structuring/: migration.py  symbol_mapping.py
src/lantern_pkms/supernote/: client.py  note_parser.py
src/lantern_pkms/vault/: writer.py
tests/: test_config.py  test_ingest_page.py  test_main_helpers.py  test_migration.py  test_note_parser.py  test_ollama_client.py  test_state_db.py  test_supernote_client.py  test_symbol_mapping.py  test_taxonomy.py  test_vault_writer_idempotency.py
