[project]
name = "lantern-pkms"
version = "0.0.5"
description = "Supernote bullet-journal ingestion, local HTR, and Lantern (Obsidian) vault sync"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "prometheus-client>=0.21",
    "supernote==0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pip-audit>=2.7",
]

[project.scripts]
lantern-pkms = "lantern_pkms.main:run"
htr-bench = "scripts.htr_bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lantern_pkms"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
